--- a/mongodb-frontend/public/index.html
+++ b/mongodb-frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#1a73e8" />
     <meta
       name="description"
-      content="Barangay Management System - Efficiently manage residents, documents, and community events"
+      content="Barangay Kabacsanan Management System - Efficiently manage residents, documents, and community events"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
